--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
                                 <h2 class="wow fadeInUp" data-wow-delay="0.2s">Community</h2>
                            </div>
                            <address class="wow fadeInUp" data-wow-delay="0.4s">
-                                <p><a href="">Google Developers Program</a></p>
-                                <p><a href="mailto:info@company.com">Developer Students Club</a></p>
+                                <p><a href="https://developers.google.com/community/gdg">Google Developers Group</a></p>
+                                <p><a href="https://developers.google.com/community/dsc">Developer Students Club</a></p>
                                 <p><a href=""></a></p>
                            </address>
                       </div>
@@ -289,15 +289,15 @@
                  <div class="col-lg-3 col-md-6">
                       <h2 class="wow fadeInUp" data-wow-delay="0.2s">Keep In Touch</h2>
                       <ul class="wow fadeInUp social-icon" data-wow-delay="0.4s">
-                           <li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                           <li><a href="#" class="fa fa-twitter"></a></li>
-                           <li><a href="#" class="fa fa-instagram"></a></li>
-                           <li><a href="#" class="fa fa-google"></a></li>
+                            <li><a href="https://www.facebook.com/pages/category/Community/DSC-AUCE-101465691691643/" class="fa fa-facebook-square" attr="facebook icon"></a></li>
+                              <li><a href="https://www.youtube.com/channel/UCw2vDOLYKTyNxA4m91QhMCQ" class="fa fa-youtube-play"></a></li>
+                              <li><a href="https://www.instagram.com/dscauce/?hl=en" class="fa fa-instagram"></a></li>
+                              <li><a href="https://www.linkedin.com/company/dsc-auce" class="fa fa-linkedin"></a></li>
                       </ul>
-
-                      <div class="wow fadeInUp copyright-text" data-wow-delay="0.8s">
-                           <p><br>Copyright &copy; 2020 <br>DSC AUCE
-                      </div>
+                      <ul class="wow fadeInUp footer-contact-info" data-wow-delay="0.4s">
+                           <li><i class="fa fa-envelope" aria-hidden="true"></i> : <a href="mailto:dscauce@gmail.com"> dscauce@gmail.com</a></li>
+                           <li></li>
+                      </ul>
                  </div>
 
                   <div class="col-lg-3 col-md-6">
@@ -306,10 +306,20 @@
                       </div>
                  </div>
 
-
             </div>
        </div>
   </footer>
+      <!--Copyright-->
+
+     <div id="copyright-area" class="container">
+          <div class="row">
+               <div class="col-lg-12 col-md-12">     
+                    <div class="wow fadeInUp " data-wow-delay="0.8s">
+                         <p>Copyright &copy; 2021 DSC AUCE | All rights reserved</p>
+                    </div>  
+               </div>                
+          </div>
+     </div> 
 
   <!-- SCRIPTS -->
   <script src="js/jquery.js"></script>
