--- a/team.html
+++ b/team.html
@@ -48,10 +48,10 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-nav-first">
           <li><a href="index.html" class="smoothScroll">Home</a></li>
-          <li><a href="index.html" class="smoothScroll">About</a></li>
-          <li><a href="index.html" class="smoothScroll">Events</a></li>
+          <li><a href="index.html#about" class="smoothScroll">About</a></li>
+          <li><a href="index.html#event" class="smoothScroll">Events</a></li>
           <li><a href="team.html" class="smoothScroll">Team</a></li>
-          <li><a href="inex.html" class="smoothScroll">Contact Us</a></li>
+          <li><a href="index.html#contact" class="smoothScroll">Contact Us</a></li>
         </ul>
 
       </div>
@@ -62,32 +62,17 @@
 
   <!-- TEAMS -->
 
-  <section id="team" data-stellar-background-ratio="0.5">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-md-12 col-sm-12">
-          <div class="section-title wow fadeInUp" data-wow-delay="0.1s">
-            <h1>OUR TEAM</h2>
-              <!--  <h4>They are nice &amp; friendly</h4> -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </section>
-
 
   <section id="team" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
 
-        <!--    <div class="col-md-12 col-sm-12">
+           <div class="col-md-12 col-sm-12">
         <div class="section-title wow fadeInUp" data-wow-delay="0.1s">
           <h1>OUR TEAM</h1>
 
         </div>
-      </div> -->
+      </div>
 
         <div class="col-md-4 col-sm-6">
           <div class="team-info">
@@ -359,7 +344,7 @@
     </div>
   </section>
 
-  <section id="event" data-stellar-background-ratio="0.5">
+  <section id="team" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
 
@@ -371,7 +356,7 @@
         </div>
 
         <div class="col-md-4 col-sm-6">
-          <div class="event-info">
+          <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <img src="images/teams/gis1.png" class="img-responsive" alt="">
               <h3>Srinidhi Satyavolu</h3>
@@ -381,7 +366,7 @@
         </div>
 
         <div class="col-md-4 col-sm-6">
-          <div class="event-info">
+          <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <img src="images/teams/gis2.png" class="img-responsive" alt="">
               <h3>Sai Rishitha Malakala</h3>
@@ -392,7 +377,7 @@
 
 
         <div class="col-md-4 col-sm-6">
-          <div class="event-info">
+          <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <img src="images/teams/gis3.png" class="img-responsive" alt="">
               <h3>Katari Anu Deepika</h3>
@@ -406,7 +391,7 @@
   </section>
 
 
-  <section id="event" data-stellar-background-ratio="0.5">
+  <section id="team" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
 
@@ -422,7 +407,7 @@
     </div>
   </section>
 
-  <section id="event" data-stellar-background-ratio="0.5">
+  <section id="team" data-stellar-background-ratio="0.5">
     <div class="container">
       <div>
 
@@ -442,7 +427,7 @@
   </section>
 
 
-  <section id="event" data-stellar-background-ratio="0.5">
+  <section id="team" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
 
@@ -454,7 +439,7 @@
         </div>
 
         <div class="col-md-6 col-sm-6">
-          <div class="event-info">
+          <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <img src="images/teams/nt2.png" alt="">
               <h3>Rohit Karukonda</h3>
@@ -464,7 +449,7 @@
         </div>
 
         <div class="col-md-6 col-sm-6">
-          <div class="event-info">
+          <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <img src="images/teams/nt3.png" alt="">
               <h3>Veluri Nikhita</h3>
@@ -477,7 +462,7 @@
     </div>
   </section>
 
-  <section id="event" data-stellar-background-ratio="0.5">
+  <section id="team" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
 
@@ -489,7 +474,7 @@
         </div>
 
         <div class="col-md-6 col-sm-6">
-          <div class="event-info">
+          <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <img src="images/teams/nt4.png" alt="">
               <h3>Shaik Ishrath</h3>
@@ -499,7 +484,7 @@
         </div>
 
         <div class="col-md-6 col-sm-6">
-          <div class="event-info">
+          <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <img src="images/teams/nt5.png" alt="">
               <h3>K S Vallari</h3>
@@ -512,7 +497,7 @@
     </div>
   </section>
 
-  <section id="event" data-stellar-background-ratio="0.5">
+  <section id="team" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
 
@@ -524,7 +509,7 @@
         </div>
 
         <div class="col-md-6 col-sm-6">
-          <div class="event-info">
+          <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <img src="images/teams/nt6.png" alt="">
               <h3>Rishita Thawait</h3>
@@ -534,7 +519,7 @@
         </div>
 
         <div class="col-md-6 col-sm-6">
-          <div class="event-info">
+          <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <img src="images/teams/nt7.png" alt="">
               <h3>Harika Sasapu</h3>
@@ -548,7 +533,7 @@
   </section>
 
 
-  <section id="event" data-stellar-background-ratio="0.5">
+  <section id="team" data-stellar-background-ratio="0.5">
     <div class="container">
       <div>
 
@@ -560,7 +545,7 @@
         </div>
 
         <div class="col-md-12 col-sm-12">
-          <div class="event-info">
+          <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
               <img src="images/teams/nt8.png" alt="">
               <h3>Mithilesh Muni</h3>
@@ -606,15 +591,16 @@
                  <div class="col-lg-3 col-md-6">
                       <h2 class="wow fadeInUp" data-wow-delay="0.2s">Keep In Touch</h2>
                       <ul class="wow fadeInUp social-icon" data-wow-delay="0.4s">
-                           <li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                           <li><a href="#" class="fa fa-twitter"></a></li>
-                           <li><a href="#" class="fa fa-instagram"></a></li>
-                           <li><a href="#" class="fa fa-google"></a></li>
+                            <li><a href="https://www.facebook.com/pages/category/Community/DSC-AUCE-101465691691643/" class="fa fa-facebook-square" attr="facebook icon"></a></li>
+                              <li><a href="https://www.youtube.com/channel/UCw2vDOLYKTyNxA4m91QhMCQ" class="fa fa-youtube-play"></a></li>
+                              <li><a href="https://www.instagram.com/dscauce/?hl=en" class="fa fa-instagram"></a></li>
+                              <li><a href="https://www.linkedin.com/company/dsc-auce" class="fa fa-linkedin"></a></li>
+                      </ul>
+                      <ul class="wow fadeInUp footer-contact-info" data-wow-delay="0.4s">
+                           <li><i class="fa fa-envelope" aria-hidden="true"></i> : <a href="mailto:dscauce@gmail.com"> dscauce@gmail.com</a></li>
+                           <li></li>
                       </ul>
 
-                      <div class="wow fadeInUp copyright-text" data-wow-delay="0.8s">
-                           <p><br>Copyright &copy; 2020 <br>DSC AUCE
-                      </div>
                  </div>
 
                   <div class="col-lg-3 col-md-6">
@@ -623,10 +609,20 @@
                       </div>
                  </div>
 
-
             </div>
        </div>
   </footer>
+      <!--Copyright-->
+
+  <div id="copyright-area" class="container">
+       <div class="row">
+            <div class="col-lg-12 col-md-12">     
+                 <div class="wow fadeInUp " data-wow-delay="0.8s">
+                      <p>Copyright &copy; 2021 DSC AUCE | All rights reserved</p>
+                 </div>  
+            </div>                
+       </div>
+  </div> 
 
   <!-- SCRIPTS -->
 
