added more button and removed hyper links for events

--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@
               <div class="event-item">
                 <h4>Duis vel lacus id magna mattis vehicula</h4>
                 <ul class="social-icon">
-                  <li><a href="#" class="fa fa-linkedin"></a></li>
+                  <!--<li><a href="#" class="fa fa-linkedin"></a></li>
                   <li><a href="#" class="fa fa-envelope-o"></a></li>
+                  -->
                 </ul>
               </div>
             </div>
@@ -159,9 +160,9 @@
               <div class="event-item">
                 <h4>Cras suscipit neque quis odio feugiat</h4>
                 <ul class="social-icon">
-                  <li><a href="#" class="fa fa-instagram"></a></li>
+                <!--<li><a href="#" class="fa fa-instagram"></a></li>
                   <li><a href="#" class="fa fa-flickr"></a></li>
-                </ul>
+                --></ul>
               </div>
             </div>
           </div>
@@ -178,9 +179,9 @@
               <div class="event-item">
                 <h4>Speaker session/tech talk - Virtual</h4>
                 <ul class="social-icon">
-                  <li><a href="#" class="fa fa-github"></a></li>
+                  <!--<li><a href="#" class="fa fa-github"></a></li>
                   <li><a href="#" class="fa fa-google"></a></li>
-                </ul>
+                  --></ul>
               </div>
             </div>
           </div>
@@ -189,7 +190,12 @@
             <!--           <p></p> -->
           </div>
         </div>
-
+        <div class="col-md-12 col-sm-12">
+          <div class="section-title wow fadeInUp" data-wow-delay="0.1s"></div>
+               <a href='events.html' target="_blank"><button class="btn btn-success" type="button">MORE</button></a>
+              <!--  <h4>They are nice &amp; friendly</h4> -->
+          </div>
+     </div>
       </div>
     </div>
   </section>
