--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="css/style.css">
-
-
-       <link rel="icon" href="images/Homepage/favicon.png" type="image/icon type">
+  <link rel="icon" href="images/Homepage/favicon.png" type="image/icon type">
 
 </head>
 
@@ -55,7 +53,7 @@
 
       <!-- MENU LINKS -->
       <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-nav-first">
+        <ul class="nav navbar-nav navbar-nav-first" style="float: right;">
           <li><a href="#home" class="smoothScroll">Home</a></li>
           <li><a href="#about" class="smoothScroll">About</a></li>
           <li><a href="#event" class="smoothScroll">Events</a></li>
@@ -135,29 +133,30 @@
 
         <div class="col-md-4 col-sm-4">
           <div class="event-thumb wow fadeInUp" data-wow-delay="0.2s">
-            <img src="images/Homepage/event1.png" class="img-responsive" alt="">
+            <img src="images/events/androidstudyjams.jpg" class="img-responsive" alt="">
             <div class="event-hover">
               <div class="event-item">
-                <h4>Duis vel lacus id magna mattis vehicula</h4>
+                <h4>Become Android Ready by learning Track 1 & 2</h4>
+                <p>Facilitator:<br/> Karun Karthik.T</p>
                 <ul class="social-icon">
-                  <li><a href="#" class="fa fa-linkedin"></a></li>
-                  <li><a href="#" class="fa fa-envelope-o"></a></li>
+                  <li><a href="https://sites.google.com/view/dscauce-study-jams/home" class="fa fa-globe"></a></li>
+                  <li><a href="https://www.youtube.com/watch?v=HxD7ZRexaRY&list=PLYJGQHV1Plya1sDccs3PWOfh-FSN3TD0D" class="fa fa-youtube"></a></li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="event-info">
-            <h3>Android Study Jams: New to programming-virtual</h3>
-            <!--    <p></p> -->
+            <h3>Android Study Jams</h3>
           </div>
         </div>
 
         <div class="col-md-4 col-sm-4">
           <div class="event-thumb wow fadeInUp" data-wow-delay="0.4s">
-            <img src="images/Homepage/event2.png" class="img-responsive" alt="">
+            <img src="images/events/30daysofgcloud.jpg" class="img-responsive" alt="">
             <div class="event-hover">
               <div class="event-item">
-                <h4>Cras suscipit neque quis odio feugiat</h4>
+                <h4>Get Hands-on experience and learn Cloud Computing and ML</h4>
+                <p>Facilitator:<br/> Sri Laasya Nutheti</p>
                 <ul class="social-icon">
                   <li><a href="#" class="fa fa-instagram"></a></li>
                   <li><a href="#" class="fa fa-flickr"></a></li>
@@ -166,26 +165,26 @@
             </div>
           </div>
           <div class="event-info">
-            <h3>Hackathon - Virtual</h3>
+            <h3>30 Days of Google Cloud</h3>
             <!--         <p></p> -->
           </div>
         </div>
 
         <div class="col-md-4 col-sm-4">
           <div class="event-thumb wow fadeInUp" data-wow-delay="0.6s">
-            <img src="images/Homepage/event3.png" class="img-responsive" alt="">
+            <img src="images/events/launch.jpg" class="img-responsive" alt="">
             <div class="event-hover">
               <div class="event-item">
-                <h4>Speaker session/tech talk - Virtual</h4>
+                <h4>Launch of DSC AUCE</h4>
                 <ul class="social-icon">
-                  <li><a href="#" class="fa fa-github"></a></li>
-                  <li><a href="#" class="fa fa-google"></a></li>
+                  <li><a href="https://www.instagram.com/dscauce/?hl=en" class="fa fa-instagram"></a></li>
+                  <li><a href="https://www.youtube.com/watch?v=xAwLlToFG1k&t=13s" class="fa fa-youtube"></a></li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="event-info">
-            <h3>Speaker session/tech talk - Virtual</h3>
+            <h3>DSC AUCE Launch</h3>
             <!--           <p></p> -->
           </div>
         </div>
