--- a/team.html
+++ b/team.html
@@ -46,7 +46,7 @@
 
       <!-- MENU LINKS -->
       <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-nav-first">
+        <ul class="nav navbar-nav navbar-nav-first" style="float: right;">
           <li><a href="index.html" class="smoothScroll">Home</a></li>
           <li><a href="index.html#about" class="smoothScroll">About</a></li>
           <li><a href="index.html#event" class="smoothScroll">Events</a></li>
@@ -256,9 +256,9 @@
         <div class="col-md-3 col-sm-6">
           <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
-              <img src="images/teams/appd2.png" class="img-responsive" alt="">
-              <h3>Adarsh Saripalli</h3>
-              <h4></h4>
+              <img src="images/teams/appd3.png" class="img-responsive" alt="">
+              <h3>Karun Karthik </h3>
+              <h4>Android Study Jams Facilitator</h4>
             </div>
           </div>
         </div>
@@ -266,8 +266,8 @@
         <div class="col-md-3 col-sm-6">
           <div class="team-info">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
-              <img src="images/teams/appd3.png" class="img-responsive" alt="">
-              <h3>Karun Karthik </h3>
+              <img src="images/teams/appd2.png" class="img-responsive" alt="">
+              <h3>Adarsh Saripalli</h3>
               <h4></h4>
             </div>
           </div>
