--- a/index.html
+++ b/index.html
@@ -20,22 +20,16 @@
 
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/preloader.css">
   <link rel="icon" href="images/Homepage/favicon.png" type="image/icon type">
 
 </head>
 
 <body>
-
   <!-- PRE LOADER -->
-  <section class="preloader">
-    <div class="spinner">
-
-      <span class="spinner-rotate"></span>
-
-    </div>
-  </section>
-
-
+  <div id="loader"></div>
+  <div id="content">       
+    
   <!-- MENU -->
   <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
     <div class="container">
@@ -56,7 +50,7 @@
         <ul class="nav navbar-nav navbar-nav-first" style="float: right;">
           <li><a href="#home" class="smoothScroll">Home</a></li>
           <li><a href="#about" class="smoothScroll">About</a></li>
-          <li><a href="#event" class="smoothScroll">Events</a></li>
+          <li><a href="events.html" class="smoothScroll">Events</a></li>
           <li><a href="team.html" class="smoothScroll">Team</a></li>
           <li><a href="#contact" class="smoothScroll">Contact Us</a></li>
         </ul>
@@ -123,80 +117,31 @@
   <section id="event" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
-
-        <div class="col-md-12 col-sm-12">
-          <div class="section-title wow fadeInUp" data-wow-delay="0.1s">
-            <h2>OUR EVENTS</h2>
-            <!--  <h4>They are nice &amp; friendly</h4> -->
+        <div class="col-md-6 col-sm-12">
+          <div class="wow fadeInUp about-image" data-wow-delay="0.6s">
+            <img src="images/events/events.jpg" style="height:400px; width:400px;" class="img-responsive" alt="">
           </div>
         </div>
-
-        <div class="col-md-4 col-sm-4">
-          <div class="event-thumb wow fadeInUp" data-wow-delay="0.2s">
-            <img src="images/events/androidstudyjams.jpg" class="img-responsive" alt="">
-            <div class="event-hover">
-              <div class="event-item">
-                <h4>Become Android Ready by learning Track 1 & 2</h4>
-                <p>Facilitator:<br/> Karun Karthik.T</p>
-                <ul class="social-icon">
-                  <li><a href="https://sites.google.com/view/dscauce-study-jams/home" class="fa fa-globe"></a></li>
-                  <li><a href="https://www.youtube.com/watch?v=HxD7ZRexaRY&list=PLYJGQHV1Plya1sDccs3PWOfh-FSN3TD0D" class="fa fa-youtube"></a></li>
-                </ul>
-              </div>
+        <div class="col-md-6 col-sm-12">
+          <div class="about-info">
+            <div class="section-title wow fadeInUp" data-wow-delay="0.2s">
+              <h2>Our Events !</h2>
             </div>
-          </div>
-          <div class="event-info">
-            <h3>Android Study Jams</h3>
-          </div>
-        </div>
 
-        <div class="col-md-4 col-sm-4">
-          <div class="event-thumb wow fadeInUp" data-wow-delay="0.4s">
-            <img src="images/events/30daysofgcloud.jpg" class="img-responsive" alt="">
-            <div class="event-hover">
-              <div class="event-item">
-                <h4>Get Hands-on experience and learn Cloud Computing and ML</h4>
-                <p>Facilitator:<br/> Sri Laasya Nutheti</p>
-                <ul class="social-icon">
-                  <li><a href="#" class="fa fa-instagram"></a></li>
-                  <li><a href="#" class="fa fa-flickr"></a></li>
-                </ul>
-              </div>
+            <div class="wow fadeInUp" data-wow-delay="0.4s" style="text-align: left;">
+              <p>Our aim is to make this archive of events every aspiring tech geeks dream portal of knowledge.</p>
+              <p>The first step to which has been taken in the LAUNCH event followed by the fabulous Google
+                CLOUD program, and following the legacy is the ongoing ANDROID STUDY JAMS, an
+                opportunity for every app dev enthusiast. </p>
+              <p>Stay tuned for our coming events, which will be from different Technical domains.</p>
+              <p> <a href="events.html" target="_blank">View all the events.</a></p>
             </div>
-          </div>
-          <div class="event-info">
-            <h3>30 Days of Google Cloud</h3>
-            <!--         <p></p> -->
-          </div>
-        </div>
-
-        <div class="col-md-4 col-sm-4">
-          <div class="event-thumb wow fadeInUp" data-wow-delay="0.6s">
-            <img src="images/events/launch.jpg" class="img-responsive" alt="">
-            <div class="event-hover">
-              <div class="event-item">
-                <h4>Launch of DSC AUCE</h4>
-                <ul class="social-icon">
-                  <li><a href="https://www.instagram.com/dscauce/?hl=en" class="fa fa-instagram"></a></li>
-                  <li><a href="https://www.youtube.com/watch?v=xAwLlToFG1k&t=13s" class="fa fa-youtube"></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="event-info">
-            <h3>DSC AUCE Launch</h3>
-            <!--           <p></p> -->
           </div>
         </div>
 
       </div>
     </div>
   </section>
-
-
-
-
-
 
   <!-- CONTACT -->
   <section id="contact" data-stellar-background-ratio="0.5">
@@ -244,7 +189,7 @@
             <div class="col-md-12 col-sm-12">
               <input type="text" class="form-control" id="cf-subject" name="subject" placeholder="Subject">
 
-              <textarea class="form-control" rows="6" id="cf-message" name="message" placeholder="Tell about your project"></textarea>
+              <textarea class="form-control" rows="6" id="cf-message" name="message" placeholder="Let's talk but you first!""></textarea>
 
               <button type="submit" class="form-control" id="cf-submit" name="submit">Send Message</button>
             </div>
@@ -321,6 +266,29 @@
      </div> 
 
   <!-- SCRIPTS -->
+  <script>
+    var loader;
+    function loadNow(opacity) {
+    if (opacity <= 0) {
+        displayContent();
+    } else {
+        loader.style.opacity = opacity;
+        window.setTimeout(function() {
+            loadNow(opacity - 0.05);
+        }, 50);
+    }
+  }
+
+  function displayContent() {
+    loader.style.display = 'none';
+    document.getElementById('content').style.display = 'block';
+  }
+
+document.addEventListener("DOMContentLoaded", function() {
+    loader = document.getElementById('loader');
+    loadNow(1);
+});
+  </script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery.stellar.min.js"></script>
@@ -329,6 +297,7 @@
   <script src="js/jquery.magnific-popup.min.js"></script>
   <script src="js/smoothscroll.js"></script>
   <script src="js/custom.js"></script>
+  </div>
 
 </body>
 
