--- a/events.html
+++ b/events.html
@@ -9,6 +9,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="author" content="">
+  <meta http-equiv="refresh" content="1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -230,6 +231,7 @@ document.addEventListener("DOMContentLoaded", function() {
     loadNow(1);
 });
   </script>
+  <script>window.location.reload();</script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery.stellar.min.js"></script>
