--- a/events.html
+++ b/events.html
@@ -230,6 +230,7 @@ document.addEventListener("DOMContentLoaded", function() {
     loadNow(1);
 });
   </script>
+  <script>window.location.reload()</script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery.stellar.min.js"></script>
