--- a/index.html
+++ b/index.html
@@ -200,71 +200,103 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
-  <footer id="footer" data-stellar-background-ratio="0.5">
-       <div class="container">
-            <div class="row">
-
-                 <div class="col-lg-3 col-md-6">
-                      <div class="footer-info">
-                           <div class="section-title">
-                                <h2 class="wow fadeInUp" data-wow-delay="0.2s">General Guidelines</h2>
-                           </div>
-                           <address class="wow fadeInUp" data-wow-delay="0.4s">
-                               <!--  <p>123 nulla a cursus rhoncus,<br> augue sem viverra 10870<br>id ultricies sapien</p> -->
-                               <p><a href="">Code Of Conduct</a></p>
-                           </address>
-                      </div>
-                 </div>
-
-                 <div class="col-lg-3 col-md-6">
-                      <div class="footer-info">
-                           <div class="section-title">
-                                <h2 class="wow fadeInUp" data-wow-delay="0.2s">Community</h2>
-                           </div>
-                           <address class="wow fadeInUp" data-wow-delay="0.4s">
-                                <p><a href="https://developers.google.com/community/gdg">Google Developers Group</a></p>
-                                <p><a href="https://developers.google.com/community/dsc">Developer Students Club</a></p>
-                                <p><a href=""></a></p>
-                           </address>
-                      </div>
-                 </div>
-
-                 <div class="col-lg-3 col-md-6">
-                      <h2 class="wow fadeInUp" data-wow-delay="0.2s">Keep In Touch</h2>
-                      <ul class="wow fadeInUp social-icon" data-wow-delay="0.4s">
-                            <li><a href="https://www.facebook.com/pages/category/Community/DSC-AUCE-101465691691643/" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                              <li><a href="https://www.youtube.com/channel/UCw2vDOLYKTyNxA4m91QhMCQ" class="fa fa-youtube-play"></a></li>
-                              <li><a href="https://www.instagram.com/dscauce/?hl=en" class="fa fa-instagram"></a></li>
-                              <li><a href="https://www.linkedin.com/company/dsc-auce" class="fa fa-linkedin"></a></li>
-                      </ul>
-                      <ul class="wow fadeInUp footer-contact-info" data-wow-delay="0.4s">
-                           <li><i class="fa fa-envelope" aria-hidden="true"></i> : <a href="mailto:dscauce@gmail.com"> dscauce@gmail.com</a></li>
-                           <li></li>
-                      </ul>
-                 </div>
-
-                  <div class="col-lg-3 col-md-6">
-                      <div class="footer-info wow fadeInUp" data-wow-delay="0.2s">
-                           <a href="#" class="logo"><img src="images/Homepage/dsclogo.png" alt="Logo" height="40px" width="300px"></a>
-                      </div>
-                 </div>
-
+      <!-- FOOTER -->
+    <footer id="footer" data-stellar-background-ratio="0.5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-info">
+              <div class="section-title">
+                <h2 class="wow fadeInUp" data-wow-delay="0.2s">
+                  General Guidelines
+                </h2>
+              </div>
+              <address class="wow fadeInUp" data-wow-delay="0.4s">
+                <!--  <p>123 nulla a cursus rhoncus,<br> augue sem viverra 10870<br>id ultricies sapien</p> -->
+                <p><a href="">Code Of Conduct</a></p>
+              </address>
             </div>
-       </div>
-  </footer>
-      <!--Copyright-->
-
-     <div id="copyright-area" class="container">
-          <div class="row">
-               <div class="col-lg-12 col-md-12">     
-                    <div class="wow fadeInUp " data-wow-delay="0.8s">
-                         <p>Copyright &copy; 2021 DSC AUCE | All rights reserved</p>
-                    </div>  
-               </div>                
           </div>
-     </div> 
 
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-info">
+              <div class="section-title">
+                <h2 class="wow fadeInUp" data-wow-delay="0.2s">Community</h2>
+              </div>
+              <address class="wow fadeInUp" data-wow-delay="0.4s">
+                <p><a href="">Google Developers Program</a></p>
+                <p>
+                  <a href="mailto:info@company.com">Developer Students Club</a>
+                </p>
+                <p><a href=""></a></p>
+              </address>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <h2 class="wow fadeInUp" data-wow-delay="0.2s">Keep In Touch</h2>
+            <ul class="wow fadeInUp social-icon" data-wow-delay="0.4s">
+              <li>
+                <a
+                  href="https://www.facebook.com/pages/category/Community/DSC-AUCE-101465691691643/"
+                  class="fa fa-facebook-square"
+                  attr="facebook icon"
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.youtube.com/channel/UCw2vDOLYKTyNxA4m91QhMCQ"
+                  class="fa fa-youtube-play"
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.instagram.com/dscauce/?hl=en"
+                  class="fa fa-instagram"
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/company/dsc-auce"
+                  class="fa fa-linkedin"
+                ></a>
+              </li>
+            </ul>
+            <ul class="wow fadeInUp footer-contact-info" data-wow-delay="0.4s">
+              <li>
+                <i class="fa fa-envelope" aria-hidden="true"></i> :
+                <a href="mailto:dscauce@gmail.com"> dscauce@gmail.com</a>
+              </li>
+              <li></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-info wow fadeInUp" data-wow-delay="0.2s">
+              <a href="#" class="logo"
+                ><img
+                  src="images/Homepage/dsclogo.png"
+                  alt="Logo"
+                  height="40px"
+                  width="300px"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--Copyright-->
+
+    <div id="copyright-area" class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
+          <div class="wow fadeInUp" data-wow-delay="0.8s">
+            <p>Copyright &copy; 2021 DSC AUCE | All rights reserved</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
   <!-- SCRIPTS -->
   <script>
     var loader;
