Updated android study jams and cloud page

--- a/events.html
+++ b/events.html
@@ -84,7 +84,7 @@
             <img src="images/events/androidstudyjams.jpg" class="img-responsive" alt="">
             <div class="event-hover">
               <div class="event-item">
-                <h4>Become Android Ready by learning Track 1 & 2</h4>
+                <h4><a id="android" href="android.html" target="_blank">Become Android Ready by learning Track 1 & 2</a></h4>
                 <p>Facilitator:<br/> Karun Karthik.T</p>
                 <ul class="social-icon">
                   <li><a href="https://sites.google.com/view/dscauce-study-jams/home" class="fa fa-globe"></a></li>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="event-info">
-            <h3>Android Study Jams</h3>
+            <h3><a href="android.html" target="_blank">Android Study Jams</a></h3>
           </div>
         </div>
 
@@ -113,7 +113,7 @@
             </div>
           </div>
           <div class="event-info">
-            <h3>30 Days of Google Cloud</h3>
+            <h3><a href="thirtydaysofgcp.html" target="_blank">30 Days of Google Cloud</a></h3>
             <!--         <p></p> -->
           </div>
         </div>
