Removed links,button and changed bg-color for last section

--- a/thirtydaysofgcp.html
+++ b/thirtydaysofgcp.html
@@ -113,30 +113,15 @@
 
             <div class="wow fadeInUp" data-wow-delay="0.4s" style="text-align: left">
               <ul class="tracks" style="margin-right: :-15px;">
-                <li><a
-                    href="https://google.qwiklabs.com/quests/120"><span
-                      class="description" id="details_redirect"><b>Getting Started: Create and Manage Cloud Resources</b></span></a></li>
-                <li><a
-                    href="https://google.qwiklabs.com/quests/118"><span
-                      class="description" id="details_redirect"><b>Perform Foundational Infrastructure Tasks in Google Cloud</b></span></a></li>
-                <li><a
-                    href="https://google.qwiklabs.com/quests/119?utm_source=google&utm_medium=lp&utm_campaign=gcpskills"><span
-                      class="description" id="details_redirect"><b>Setup and Configure a Cloud Environment in Google Cloud</b></span></a></li>
-                <li><a
-                    href="https://google.qwiklabs.com/quests/121?utm_source=google&utm_medium=lp&utm_campaign=gcpskills"><span
-                      class="description" id="details_redirect"><b>Deploy and Manage Your Cloud Environments with Google Cloud</b></span></a></li>
-                <li><a
-                    href="https://google.qwiklabs.com/quests/128?utm_source=google&utm_medium=lp&utm_campaign=gcpskills"><span
-                      class="description" id="details_redirect"><b>Build and Secure Networks in Google Cloud</b></span></a></li>
-                <li><a
-                    href="https://google.qwiklabs.com/quests/116?utm_source=google&utm_medium=lp&utm_campaign=gcpskills"><span
-                      class="description" id="details_redirect"><b>Deploy to Kubernetes in Google Cloud</b></span></a></li>
+                <li style="list-style: none; padding-bottom: 10px;"><b>Topics covered in this track:</b></li>
+                <li>Getting Started: Create and Manage Cloud Resources</li>
+                <li>Perform Foundational Infrastructure Tasks in Google Cloud</li>
+                <li>Setup and Configure a Cloud Environment in Google Cloud</li>
+                <li>Deploy and Manage Your Cloud Environments with Google Cloud</li>
+                <li>Build and Secure Networks in Google Cloud</li>
+                <li>Deploy to Kubernetes in Google Cloud</li>
 
               </ul>
-              <p>&nbsp;</p>
-              <a href="https://google.qwiklabs.com/quests/120" class="btn btn-primary"id="buttons" style="margin-right: -15px">
-                Get started
-              </a>
           </div>
         </div>
 
@@ -158,30 +143,15 @@
 
             <div class="wow fadeInUp" data-wow-delay="0.4s" style="text-align: left">
             <ul style="margin-left:-15px;">
-                <li><a
-                    href="https://google.qwiklabs.com/quests/120"><span
-                      class="description" id="details_redirect"><b>Getting Started: Create and Manage Cloud Resources</b></span></a></li>
-                <li><a
-                    href="https://google.qwiklabs.com/quests/117?utm_source=google&utm_medium=lp&utm_campaign=gcpskills"><span
-                      class="description" id="details_redirect"><b>Perform Foundational Data, ML, and AI Tasks in Google Cloud</b></span></a></li>
-                  <li><a
-                    href="https://google.qwiklabs.com/quests/123?utm_source=google&utm_medium=lp&utm_campaign=gcpskills"><span
-                      class="description" id="details_redirect"><b>Insights from Data with BigQuery</b></span></a></li>
-                <li><a
-                    href="https://google.qwiklabs.com/quests/132"><span
-                      class="description" id="details_redirect"><b>Engineer Data in Google Cloud</b></span></a></li>
-                <li><a
-                    href="https://google.qwiklabs.com/quests/136?utm_source=google&utm_medium=lp&utm_campaign=gcpskills"><span
-                      class="description" id="details_redirect"><b>Integrate with Machine Learning APIs</b></span></a></li>
-                <li><a
-                    href="https://google.qwiklabs.com/quests/126?utm_source=google&utm_medium=lp&utm_campaign=gcpskills"><span
-                      class="description" id="details_redirect"><b>Explore Machine Learning Models with Explainable AI</b></span></a></li>
+                <li style="list-style: none; padding-bottom: 10px;"><b>Topics covered in this track:</b></li>
+                <li>Getting Started: Create and Manage Cloud Resources</li>
+                <li>Perform Foundational Data, ML, and AI Tasks in Google Cloud</li>
+                <li>Insights from Data with BigQuery</li>
+                <li>Engineer Data in Google Cloud</li>
+                <li>Integrate with Machine Learning APIs</li>
+                <li>Explore Machine Learning Models with Explainable AI</li>
 
               </ul>
-              <p>&nbsp;</p>
-              <a href="https://google.qwiklabs.com/quests/120" class="btn btn-primary" id="buttons">
-                Get Started
-              </a>
             </div>  
           </div>
         </div>
@@ -197,13 +167,12 @@
   </section>
 
   <!--Perks of enrolling in the program -->
-  <section>
+  <section id="event">
      <div class="wow fadeInUp" data-wow-delay="0.4s" >
         <div class="container my-5">
           <div class="section-title wow fadeInUp" >
               <h2 style="text-align: center;">Perks of enrolling in the program</h2>
-              <p style="padding: auto;">Upon successful completion of the program, you'll get Google Cloud Goodies and Digital Badges from Google itself! 
-            There are a lot of things in store for you. We want to make sure that by the end of this program:</p>
+              <p style="padding: auto; text-align: left;">Upon successful completion of the program, you'll get Google Cloud Goodies and Digital Badges from Google itself!There are a lot of things in store for you. We want to make sure that by the end of this program:</p>
           </div>
     
             <div class="row py-4 wow fadeInUp"data-wow-delay="0.2s">
