updated css of gcp events card

--- a/events.html
+++ b/events.html
@@ -103,7 +103,7 @@
             <img src="images/events/30daysofgcloud.jpg" class="img-responsive" alt="">
             <div class="event-hover">
               <div class="event-item">
-                <h4><a id="gcpcloud" href="thirtydaysofgcp.html" target="_blank">Get Hands-on experience and learn Cloud Computing and ML</a></h4>
+                <h4><a id="gcp" href="thirtydaysofgcp.html" target="_blank">Get Hands-on experience and learn Cloud Computing and ML</a></h4>
                 <p>Facilitator:<br/> Sri Laasya Nutheti</p>
                 <ul class="social-icon">
                   <li><a href="#" class="fa fa-instagram"></a></li>
