--- a/events.html
+++ b/events.html
@@ -106,8 +106,8 @@
                 <h4><a id="gcp" href="thirtydaysofgcp.html" target="_blank">Get Hands-on experience and learn Cloud Computing and ML</a></h4>
                 <p>Facilitator:<br/> Sri Laasya Nutheti</p>
                 <ul class="social-icon">
-                  <li><a href="#" class="fa fa-instagram"></a></li>
-                  <li><a href="#" class="fa fa-flickr"></a></li>
+                  <li><a href="https://www.instagram.com/dscauce/" class="fa fa-instagram"></a></li>
+                  <li><a href="https://www.youtube.com/watch?v=HxD7ZRexaRY&list=PLYJGQHV1Plya1sDccs3PWOfh-FSN3TD0D" class="fa fa-youtube"></a></li>
                 </ul>
               </div>
             </div>
