yt link updated

--- a/events.html
+++ b/events.html
@@ -107,7 +107,7 @@
                 <p>Facilitator:<br/> Sri Laasya Nutheti</p>
                 <ul class="social-icon">
                   <li><a href="https://www.instagram.com/dscauce/" class="fa fa-instagram"></a></li>
-                  <li><a href="https://www.youtube.com/watch?v=HxD7ZRexaRY&list=PLYJGQHV1Plya1sDccs3PWOfh-FSN3TD0D" class="fa fa-youtube"></a></li>
+                  <li><a href="https://www.youtube.com/watch?v=Dub8GyiBOms&feature=youtu.be" class="fa fa-youtube"></a></li>
                 </ul>
               </div>
             </div>
